# SkillOPs

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  skillops_loop_memory.md  tsconfig.json
artifacts/: evaluation-report.md  final-diff.patch  implementation-notes.md  metric-summary.json  pr-evidence.md  pr-summary.md  pr-url.txt  readme-diff-verification.md  recommendation-report.md  repo-inspection.md  run-history.json  skill-change-log.md  verification-report.md  weekly-performance-report.md
docs/: skillops.md
loops/: incident-triage.loop.yaml  meta-loop.yaml  weekly-skill-review.yaml
loops/schemas/: escalation-policy.schema.json  evidence-spec.schema.json  improvement-policy.schema.json  loop-spec.schema.json  metric-spec.schema.json  skill-spec.schema.json
skillops/: __init__.py  __main__.py  cli.py
skillops/analysis/: __init__.py  analyze_performance.py  diagnose_failure.py  run_challenge_benchmarks.py  run_drift_check.py  run_optimization_scan.py  run_staleness_check.py
skillops/db/: __init__.py  queries.py  schema.sql
skillops/evidence/: __init__.py  collect_evidence.py  fetch_incident_outcomes.py  fetch_run_history.py  validate_evidence.py
skillops/memory/: __init__.py  read_memory.py  skill-memory.json  write_memory.py
src/: shims.d.ts  types.ts
tests/: conftest.py  metrics.test.ts  run-skill.test.ts  test_branching.py  test_memory.py  test_metrics.py  test_runner.py  test_thresholds.py  test_update_skill.py  test_verifier.py  test_versioning.py  update-skill.test.ts  verifier.test.ts
(+86 files in other folders)
